--- a/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
+++ b/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
@@ -404,7 +404,6 @@
                                                     </subviews>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
-                                                        <constraint firstItem="mp3-fR-hZf" firstAttribute="leading" secondItem="bVc-0N-N98" secondAttribute="leading" id="1cR-Mf-mX9"/>
                                                         <constraint firstAttribute="bottom" secondItem="653-DD-e8A" secondAttribute="bottom" constant="25" id="6xJ-aX-Fgt"/>
                                                         <constraint firstItem="ZQN-8i-t4e" firstAttribute="trailing" secondItem="mp3-fR-hZf" secondAttribute="trailing" id="8Kl-gb-UAL"/>
                                                         <constraint firstItem="fJF-HQ-axH" firstAttribute="leading" secondItem="mp3-fR-hZf" secondAttribute="trailing" id="CS5-yu-oSZ"/>
@@ -424,6 +423,7 @@
                                             <constraints>
                                                 <constraint firstItem="Z7W-2B-pa6" firstAttribute="leading" secondItem="PWL-V5-NZ0" secondAttribute="leading" id="4ut-ZQ-4fr"/>
                                                 <constraint firstItem="mp3-fR-hZf" firstAttribute="top" secondItem="PWL-V5-NZ0" secondAttribute="top" id="7Tr-vU-Fjx"/>
+                                                <constraint firstItem="mp3-fR-hZf" firstAttribute="leading" secondItem="PWL-V5-NZ0" secondAttribute="leading" constant="5" id="7po-DA-Row"/>
                                                 <constraint firstAttribute="bottom" secondItem="Z7W-2B-pa6" secondAttribute="bottom" id="LMW-WP-E8A"/>
                                                 <constraint firstAttribute="bottom" secondItem="bVc-0N-N98" secondAttribute="bottom" constant="5" id="My6-QX-4S2"/>
                                                 <constraint firstAttribute="trailing" secondItem="Z7W-2B-pa6" secondAttribute="trailing" id="ZFp-Kk-kc3"/>
@@ -451,8 +451,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="351" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0hO-eQ-3dn">
-                                                    <rect key="frame" x="5" y="20" width="341" height="103"/>
+                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0hO-eQ-3dn">
+                                                    <rect key="frame" x="10" y="10" width="331" height="108"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="5" minimumInteritemSpacing="5" id="PWy-EA-zya">
                                                         <size key="itemSize" width="68" height="68"/>
@@ -462,14 +462,18 @@
                                                     </collectionViewFlowLayout>
                                                     <cells>
                                                         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DrawingToolCell" id="VyZ-7h-NMX" customClass="DrawingToolCell" customModule="spriteMaker" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="17.666666666666668" width="68" height="68"/>
+                                                            <rect key="frame" x="0.0" y="20" width="68" height="68"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ZWB-Qk-e0b">
                                                                 <rect key="frame" x="0.0" y="0.0" width="68" height="68"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
+                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ymX-5Z-YL2">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="68" height="68"/>
+                                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                                    </view>
                                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bCf-pK-4qW">
-                                                                        <rect key="frame" x="3.3333333333333321" y="3.3333333333333321" width="61.333333333333343" height="61.333333333333343"/>
+                                                                        <rect key="frame" x="10.333333333333332" y="10.333333333333332" width="47.333333333333343" height="47.333333333333343"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="width" secondItem="bCf-pK-4qW" secondAttribute="height" multiplier="1:1" id="laU-9h-vDM"/>
                                                                         </constraints>
@@ -478,12 +482,17 @@
                                                                 <constraints>
                                                                     <constraint firstItem="bCf-pK-4qW" firstAttribute="centerY" secondItem="ZWB-Qk-e0b" secondAttribute="centerY" id="KCX-uZ-Pkh"/>
                                                                     <constraint firstItem="bCf-pK-4qW" firstAttribute="centerX" secondItem="ZWB-Qk-e0b" secondAttribute="centerX" id="Kyg-Qc-X9d"/>
-                                                                    <constraint firstItem="bCf-pK-4qW" firstAttribute="width" secondItem="ZWB-Qk-e0b" secondAttribute="width" multiplier="0.9" id="bN9-9C-wyX"/>
+                                                                    <constraint firstItem="bCf-pK-4qW" firstAttribute="width" secondItem="ZWB-Qk-e0b" secondAttribute="width" multiplier="0.7" id="bN9-9C-wyX"/>
+                                                                    <constraint firstAttribute="trailing" secondItem="ymX-5Z-YL2" secondAttribute="trailing" id="dZm-xu-bAK"/>
+                                                                    <constraint firstAttribute="bottom" secondItem="ymX-5Z-YL2" secondAttribute="bottom" id="dac-ZZ-h56"/>
+                                                                    <constraint firstItem="ymX-5Z-YL2" firstAttribute="leading" secondItem="ZWB-Qk-e0b" secondAttribute="leading" id="e6C-4j-H4f"/>
+                                                                    <constraint firstItem="ymX-5Z-YL2" firstAttribute="top" secondItem="ZWB-Qk-e0b" secondAttribute="top" id="qNI-fT-aZ1"/>
                                                                 </constraints>
                                                             </collectionViewCellContentView>
-                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <size key="customSize" width="68" height="68"/>
                                                             <connections>
+                                                                <outlet property="cellBG" destination="ymX-5Z-YL2" id="k02-Mc-aUb"/>
                                                                 <outlet property="toolImage" destination="bCf-pK-4qW" id="r5J-fm-UFa"/>
                                                             </connections>
                                                         </collectionViewCell>
@@ -495,10 +504,10 @@
                                                 </collectionView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="0hO-eQ-3dn" secondAttribute="bottom" constant="5" id="3p4-pq-2ae"/>
-                                                <constraint firstItem="0hO-eQ-3dn" firstAttribute="leading" secondItem="fHd-uE-aeo" secondAttribute="leading" constant="5" id="i5h-9g-dKy"/>
-                                                <constraint firstAttribute="trailing" secondItem="0hO-eQ-3dn" secondAttribute="trailing" constant="5" id="qFb-In-Fta"/>
-                                                <constraint firstItem="0hO-eQ-3dn" firstAttribute="top" secondItem="fHd-uE-aeo" secondAttribute="top" constant="20" id="y4C-3c-1PI"/>
+                                                <constraint firstAttribute="bottom" secondItem="0hO-eQ-3dn" secondAttribute="bottom" constant="10" id="3p4-pq-2ae"/>
+                                                <constraint firstItem="0hO-eQ-3dn" firstAttribute="leading" secondItem="fHd-uE-aeo" secondAttribute="leading" constant="10" id="i5h-9g-dKy"/>
+                                                <constraint firstAttribute="trailing" secondItem="0hO-eQ-3dn" secondAttribute="trailing" constant="10" id="qFb-In-Fta"/>
+                                                <constraint firstItem="0hO-eQ-3dn" firstAttribute="top" secondItem="fHd-uE-aeo" secondAttribute="top" constant="10" id="y4C-3c-1PI"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
